Fix text alignment in header and header h1

--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 
 header {
   width: 100%;
-  text-align: top;
+  text-align:top;
   padding: 15px 0;
 }
 
@@ -22,7 +22,7 @@ header h1 {
   font-size: 32px;
   letter-spacing: 2px;
   margin: 0;
-  text-align:top;
+  text-align:center;
 }
 
 main {
